Fix Findbugs